# EPLfan

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.claude/: metadata.json
.streamlit/: config.toml  secrets.toml.example
data/: epl_indicator.db
data/models/: classifier_btts.pkl  classifier_btts_20260107.pkl  classifier_ou_2_5.pkl
data/training/: training_data.csv
docs/: code-standards.md  codebase-summary.md  design-guidelines.md  project-overview-pdr.md  system-architecture.md
src/: __init__.py  cli.py  main.py
src/alerts/: __init__.py  telegram_service.py  templates.py
src/config/: __init__.py  elite_teams.yaml  settings.py
src/config/weights/: 1x2_weights.yaml  (+3 more)
src/fetchers/: __init__.py  betfair_fetcher.py  clubelo_fetcher.py  dome_api_fetcher.py  fixture_fetcher.py  historical_data_seeder.py  polymarket_fetcher.py  understat_fetcher.py
src/models/: __init__.py  ab_testing.py  backtester.py  base_rate_tracker.py  edge_detector.py  feature_builder.py  market_probabilities.py  ml_classifier.py  performance_logger.py  poisson_matrix.py  training_data.py  training_pipeline.py  weight_engine.py
src/services/: __init__.py  scheduler.py
src/storage/: __init__.py  database.py  models.py
src/ui/: __init__.py  dashboard.py
tests/: __init__.py  test_alerts.py  test_backtester.py  test_base_rate.py  test_config.py  test_dome_api_fetcher.py  test_features.py  test_fetchers.py  test_historical_seeder.py  test_integration.py  test_ml_classifier.py  test_models.py  test_scheduler.py  test_storage.py  test_ui_components.py
(+12 files in other folders)
