[project]
name = "epl-bet-indicator"
version = "0.1.0"
description = "Multi-market sports betting indicator for EPL on Polymarket"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",

    # API Clients
    "betfairlightweight>=2.20.0",
    "understatapi>=0.6.0",
    "py-clob-client>=0.1.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",

    # Database
    "sqlalchemy>=2.0.0",

    # UI & Alerts
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "python-telegram-bot>=20.0",

    # Scheduler
    "apscheduler>=3.10.0",

    # Config
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.0",
]
ml = [
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
